--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -544,6 +544,8 @@
 	"codeNodeEditor.completer.section.cast": "Cast",
 	"codeNodeEditor.completer.section.compare": "Compare",
 	"codeNodeEditor.completer.section.validation": "Validate",
+	"codeNodeEditor.completer.section.variable.project": "Project Variables",
+	"codeNodeEditor.completer.section.variable.global": "Global Variables",
 	"codeNodeEditor.linter.allItems.firstOrLastCalledWithArg": "expects no argument.",
 	"codeNodeEditor.linter.allItems.emptyReturn": "Code doesn't return items properly. Please return an array of objects, one for each item you would like to output.",
 	"codeNodeEditor.linter.allItems.itemCall": "`item` is a property to access, not a method to call. Did you mean `.item` without brackets?",
