First draft in adding a new page for project variables, and making it available on the overview and projects pages

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2884,10 +2884,11 @@
 	"variables.table.key": "Key",
 	"variables.table.value": "Value",
 	"variables.table.usage": "Usage Syntax",
+	"variables.table.scope": "Scope",
+	"variables.table.scope.global": "Global",
 	"variables.editing.key.placeholder": "Enter a name",
 	"variables.editing.value.placeholder": "Enter a value",
-	"variables.editing.key.error.startsWithLetter": "This field may only start with a letter",
-	"variables.editing.key.error.jsonKey": "This field may contain only letters, numbers, and underscores",
+	"variables.editing.key.error.regex": "This field may contain only letters, numbers, and underscores",
 	"variables.row.button.save": "Save",
 	"variables.row.button.cancel": "Cancel",
 	"variables.row.button.edit": "Edit",
@@ -2903,6 +2904,17 @@
 	"variables.modals.deleteConfirm.message": "Are you sure you want to delete the variable \"{name}\"? This cannot be undone.",
 	"variables.modals.deleteConfirm.confirmButton": "Delete",
 	"variables.modals.deleteConfirm.cancelButton": "Cancel",
+	"variables.modal.title.create": "New variable",
+	"variables.modal.title.edit": "Edit variable",
+	"variables.modal.key.label": "Key",
+	"variables.modal.value.label": "Value",
+	"variables.modal.scope.label": "Scope",
+	"variables.modal.scope.global": "Global",
+	"variables.modal.scope.all": "All",
+	"variables.modal.button.cancel": "Cancel",
+	"variables.modal.button.save": "Save",
+	"variables.modal.error.keyExistsInProject": "The key already exists in this project",
+	"variables.modal.warning.globalKeyExists": "The same key already exists in global scope. This variable will override the global variable inside the project",
 	"contextual.credentials.sharing.unavailable.title": "Upgrade to collaborate",
 	"contextual.credentials.sharing.unavailable.title.cloud": "Upgrade to collaborate",
 	"contextual.credentials.sharing.unavailable.description": "You can share credentials with others when you upgrade your plan.",
