feat(editor): Add AI Assistant privacy settings

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -246,6 +246,12 @@
 	"aiAssistant.prompts.currentView.executionsView": "The user is currently looking at the list of executions for the currently open workflow.",
 	"aiAssistant.prompts.currentView.workflowEditor": "The user is currently looking at the current workflow in n8n editor, without any specific node selected.",
 	"aiAssistant.tooltip": "n8n AI",
+	"aiAssistant.privacySettings.trigger.tooltip": "Privacy settings",
+	"aiAssistant.privacySettings.heading": "Allow n8n to use your workflow data to improve AI responses",
+	"aiAssistant.privacySettings.allowSendingNodeParameters.label": "Allow sending node parameters",
+	"aiAssistant.privacySettings.allowSendingNodeParameters.tooltip": "When enabled, n8n will send node parameter values from your currently opened workflow",
+	"aiAssistant.privacySettings.allowSendingResolvedExpressions.label": "Allow sending resolved expressions",
+	"aiAssistant.privacySettings.allowSendingResolvedExpressions.tooltip": "When enabled, n8n will send resolved expression values from your node parameters",
 	"banners.confirmEmail.message.1": "To secure your account and prevent future access issues, please confirm your",
 	"banners.confirmEmail.message.2": "email address.",
 	"banners.confirmEmail.button": "Confirm email",
