⚡️ Strip parameters from the workflow in support chat

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -245,13 +245,14 @@
 	"aiAssistant.prompts.currentView.credentialsList": "The user is currently looking at the list of credentials.",
 	"aiAssistant.prompts.currentView.executionsView": "The user is currently looking at the list of executions for the currently open workflow.",
 	"aiAssistant.prompts.currentView.workflowEditor": "The user is currently looking at the current workflow in n8n editor, without any specific node selected.",
+	"aiAssistant.propmpt.sharingParametersNotAllowed": "The user has opted not to send any node parameters for this workflow",
 	"aiAssistant.tooltip": "n8n AI",
 	"aiAssistant.privacySettings.trigger.tooltip": "Privacy settings",
 	"aiAssistant.privacySettings.heading": "Allow n8n to use your workflow data to improve AI responses",
 	"aiAssistant.privacySettings.allowSendingNodeParameters.label": "Allow sending node parameters",
 	"aiAssistant.privacySettings.allowSendingNodeParameters.tooltip": "When enabled, n8n will send node parameter values from your currently opened workflow",
 	"aiAssistant.privacySettings.allowSendingResolvedExpressions.label": "Allow sending resolved expressions",
-	"aiAssistant.privacySettings.allowSendingResolvedExpressions.tooltip": "When enabled, n8n will send resolved expression values from your node parameters",
+	"aiAssistant.privacySettings.allowSendingResolvedExpressions.tooltip": "When enabled, n8n will resolve and send values for node parmeters that contain expressions",
 	"aiAssistant.privacySettings.save.error": "Error updating user settings",
 	"banners.confirmEmail.message.1": "To secure your account and prevent future access issues, please confirm your",
 	"banners.confirmEmail.message.2": "email address.",
