⚡️ Stripping expressions and input data

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -245,7 +245,8 @@
 	"aiAssistant.prompts.currentView.credentialsList": "The user is currently looking at the list of credentials.",
 	"aiAssistant.prompts.currentView.executionsView": "The user is currently looking at the list of executions for the currently open workflow.",
 	"aiAssistant.prompts.currentView.workflowEditor": "The user is currently looking at the current workflow in n8n editor, without any specific node selected.",
-	"aiAssistant.propmpt.sharingParametersNotAllowed": "The user has opted not to send any node parameters for this workflow",
+	"aiAssistant.propmpt.sharingParametersNotAllowed": "The user has opted not to share any node parameters or input data in their privacy settings.",
+	"aiAssistant.propmpt.parameterNotVisible": "Not visible",
 	"aiAssistant.tooltip": "n8n AI",
 	"aiAssistant.privacySettings.trigger.tooltip": "Privacy settings",
 	"aiAssistant.privacySettings.heading": "Allow n8n to use your workflow data to improve AI responses",
