--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3576,6 +3576,7 @@
 	"preBuiltAgentTemplates.viewAllLink": "View all templates",
 	"commandBar.placeholder": "Type a command or search...",
 	"commandBar.noResults": "No results found",
+	"commandBar.sections.recent": "Recent",
 	"commandBar.sections.nodes": "Nodes",
 	"commandBar.sections.workflow": "Workflow",
 	"commandBar.sections.workflows": "Workflows",
@@ -3596,7 +3597,7 @@
 	"commandBar.nodes.keywords.add": "add",
 	"commandBar.nodes.keywords.create": "create",
 	"commandBar.nodes.keywords.node": "node",
-	"commandBar.workflow.test": "Test workflow",
+	"commandBar.workflow.test": "Execute workflow",
 	"commandBar.workflow.save": "Save workflow",
 	"commandBar.workflow.activate": "Activate workflow",
 	"commandBar.workflow.deactivate": "Deactivate workflow",
