feat(editor): Introduce `Replace Node` context menu option (#20287)

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1651,6 +1651,7 @@
 	"contextMenu.tidyUpWorkflow": "Tidy up workflow",
 	"contextMenu.tidyUpSelection": "Tidy up selection",
 	"contextMenu.extract": "Convert node to sub-workflow | Convert {count} nodes to sub-workflow",
+	"contextMenu.replace": "Replace",
 	"contextMenu.duplicate": "Duplicate | Duplicate {count} {subject}",
 	"contextMenu.open": "Open...",
 	"contextMenu.test": "Execute step",
