--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1152,6 +1152,8 @@
 	"mainSidebar.whatsNew.fullChangelog": "Full changelog",
 	"mcp.workflowNotEligable.description": "Only active, webhook-triggered workflows can be accessible through MCP",
 	"mcp.workflowDeactivated.title": "MCP Access Disabled",
+	"mcp.productionCheklist.title": "Enable MCP access",
+	"mcp.productionCheklist.description": "Enable MCP clients to access this workflow in the workflow settings",
 	"mcp.workflowDeactivated.message": "MCP Access has been disabled for this workflow because it has been deactivated.",
 	"menuActions.duplicate": "Duplicate",
 	"menuActions.download": "Download",
