--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1153,7 +1153,7 @@
 	"mcp.workflowNotEligable.description": "Only active, webhook-triggered workflows can be accessible through MCP",
 	"mcp.workflowDeactivated.title": "MCP Access Disabled",
 	"mcp.productionCheklist.title": "Enable MCP access",
-	"mcp.productionCheklist.description": "Enable MCP clients to access this workflow in the workflow settings",
+	"mcp.productionCheklist.description": "Allow MCP clients to access this workflow",
 	"mcp.workflowDeactivated.message": "MCP Access has been disabled for this workflow because it has been deactivated.",
 	"menuActions.duplicate": "Duplicate",
 	"menuActions.download": "Download",
