Add missing locale entries

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3593,6 +3593,9 @@
 	"commandBar.sections.evaluation": "Evaluation",
 	"commandBar.sections.demo": "Demo",
 	"commandBar.sections.general": "Navigation",
+	"commandBar.sections.templates": "Templates",
+	"commandBar.templates.import": "Import template",
+	"commandBar.templates.importWithPrefix": "Import template {templateName}",
 	"commandBar.nodes.addNode": "Add node",
 	"commandBar.nodes.addStickyNote": "Add sticky note",
 	"commandBar.nodes.openNode": "Open node",
