⚡️ Re-fetch workflow after updating active status

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2697,6 +2697,7 @@
 	"workflowSettings.showError.saveSettings2.message": "The timeout is longer than allowed",
 	"workflowSettings.showError.saveSettings2.title": "Problem saving settings",
 	"workflowSettings.showError.saveSettings3.title": "Problem saving settings",
+	"workflowSettings.showError.fetchSettings.title": "Problem fetching settings",
 	"workflowSettings.showMessage.saveSettings.title": "Workflow settings saved",
 	"workflowSettings.timeoutAfter": "Timeout After",
 	"workflowSettings.timeoutWorkflow": "Timeout Workflow",
@@ -2807,6 +2808,7 @@
 	"workflows.empty.shared-with-me.link": "<a href=\"#\">Back to Personal</a>",
 	"workflows.empty.readyToRunV2": "Try an AI workflow",
 	"workflows.list.easyAI": "Test the power of AI in n8n with this simple AI Agent Workflow",
+	"workflows.list.error.fetching.one": "Error fetching workflow",
 	"workflows.list.error.fetching": "Error fetching workflows",
 	"workflows.shareModal.title": "Share '{name}'",
 	"workflows.shareModal.title.static": "Shared with {projectName}",
