--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -127,6 +127,8 @@
 	"generic.your": "Your",
 	"generic.apiKey": "API Key",
 	"generic.invalidJsonSaveFailed": "Unable to save due to invalid JSON",
+	"generic.from": "From",
+	"generic.to": "To",
 	"about.aboutN8n": "About n8n",
 	"about.close": "Close",
 	"about.license": "License",
@@ -2956,7 +2958,6 @@
 	"dataTable.addColumn.typeInput.label": "@:_reusableBaseText.type",
 	"dataTable.addColumn.error": "Error adding column",
 	"dataTable.addColumn.alreadyExistsError": "This column already exists",
-	"dataTable.addColumn.alreadyExistsDescription": "Column name already exisits, choose a different name",
 	"dataTable.moveColumn.error": "Error moving column",
 	"dataTable.deleteColumn.error": "Error deleting column",
 	"dataTable.deleteColumn.confirm.title": "Delete column",
@@ -2974,6 +2975,7 @@
 	"dataTable.banner.storageLimitError.message": "{usage} of Data tables storage used, operations may fail. Delete data to avoid errors",
 	"dataTable.error.tableNotInitialized": "Table not initialized",
 	"dataTable.noRows": "No rows",
+	"dataTable.filters.placeholder": "Filter...",
 	"dataTable.filters.isNull": "Is null",
 	"dataTable.filters.isNotNull": "Is not null",
 	"dataTable.filters.isEmpty": "Is empty",
@@ -2985,6 +2987,10 @@
 	"dataTable.filters.greaterThanOrEqual": "Greater than or equal",
 	"dataTable.filters.lessThan": "Less than",
 	"dataTable.filters.lessThanOrEqual": "Less than or equal",
+	"dataTable.filters.empty": "Empty",
+	"dataTable.filters.equals": "Equals",
+	"dataTable.filters.notEqual": "Does not equal",
+	"dataTable.filters.contains": "Contains",
 	"dataTable.addColumn.alreadyExistsDescription": "Column name already exists, choose a different name",
 	"dataTable.addColumn.systemColumnDescription": "This is a system column, choose a different name",
 	"dataTable.addColumn.testingColumnDescription": "This column is used for testing, choose a different name",
