--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1461,6 +1461,7 @@
 	"nodeCredentials.selectedCredentialUnavailable": "{name} (unavailable)",
 	"nodeCredentials.showMessage.message": "Nodes that used credential \"{oldCredentialName}\" have been updated to use \"{newCredentialName}\"",
 	"nodeCredentials.showMessage.title": "Node credential updated",
+	"nodeCredentials.autoAssigned.message": "Added this credential to {count} other node(s)",
 	"nodeCredentials.updateCredential": "Update Credential",
 	"nodeErrorView.cause": "Cause",
 	"nodeErrorView.copyToClipboard": "Copy to Clipboard",
