--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -126,6 +126,7 @@
 	"generic.project": "Project",
 	"generic.your": "Your",
 	"generic.apiKey": "API Key",
+	"generic.invalidJsonSaveFailed": "Unable to save due to invalid JSON",
 	"about.aboutN8n": "About n8n",
 	"about.close": "Close",
 	"about.license": "License",
@@ -1278,7 +1279,6 @@
 	"ndv.pinData.beforeClosing.title": "Save output changes before closing?",
 	"ndv.pinData.beforeClosing.cancel": "Discard",
 	"ndv.pinData.beforeClosing.confirm": "Save",
-	"ndv.pinData.error.syntaxError.title": "Unable to save due to invalid JSON",
 	"ndv.pinData.error.tooLarge.title": "Unable to pin data due to size limit",
 	"ndv.pinData.error.tooLarge.description": "Workflow has reached the maximum allowed pinned data size ({size} mb / {limit} mb)",
 	"ndv.pinData.error.tooLargeWorkflow.title": "Unable to pin data due to size limit",
