add roles labels

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1871,32 +1871,52 @@
 	"projectRoles.manageRoles.paywall.text": "Create custom roles with granular permissions to control exactly what team members can do inside projects.",
 
 	"projectRoles.project:read": "View",
+	"projectRoles.project:read.tooltip": "View project name, icon, description, and navigate within the project",
 	"projectRoles.project:update": "Edit",
+	"projectRoles.project:update.tooltip": "Edit project details and manage users",
 	"projectRoles.project:delete": "Delete",
+	"projectRoles.project:delete.tooltip": "Delete the entire project and all its contents",
 
 	"projectRoles.folder:read": "View",
+	"projectRoles.folder:read.tooltip": "View folders and subfolders within a project",
 	"projectRoles.folder:update": "Edit",
+	"projectRoles.folder:update.tooltip": "Rename folders, move workflows between folders, and change parent folder",
 	"projectRoles.folder:create": "Create",
+	"projectRoles.folder:create.tooltip": "Create new folders or subfolders",
 	"projectRoles.folder:move": "Transfer",
+	"projectRoles.folder:move.tooltip": "Move a folder and its workflows to another project.",
 	"projectRoles.folder:delete": "Delete",
+	"projectRoles.folder:delete.tooltip": "Delete an empty folder. If not empty, ask further action",
 
 	"projectRoles.workflow:read": "View",
+	"projectRoles.workflow:read.tooltip": "View workflows within the project",
 	"projectRoles.workflow:execute": "Execute",
 	"projectRoles.workflow:update": "Edit",
+	"projectRoles.workflow:update.tooltip": "Edit workflow content, activate/deactivate, and execute workflows",
 	"projectRoles.workflow:create": "Create",
+	"projectRoles.workflow:create.tooltip": "Create new workflows",
 	"projectRoles.workflow:share": "Share",
+	"projectRoles.workflow:share.tooltip": "Share workflows with other users",
 	"projectRoles.workflow:move": "Transfer",
+	"projectRoles.workflow:move.tooltip": "Transfer workflows to another project",
 	"projectRoles.workflow:delete": "Delete",
+	"projectRoles.workflow:delete.tooltip": "Delete workflows",
 
 	"projectRoles.credential:read": "View",
+	"projectRoles.credential:read.tooltip": "View credentials details (secret masked) and use them in workflows",
 	"projectRoles.credential:update": "Edit",
+	"projectRoles.credential:update.tooltip": "Edit credential details including secret",
 	"projectRoles.credential:create": "Create",
+	"projectRoles.credential:create.tooltip": "Create new credentials",
 	"projectRoles.credential:share": "Share",
 	"projectRoles.credential:move": "Transfer",
+	"projectRoles.credential:move.tooltip": "Move credentials to another project",
 	"projectRoles.credential:delete": "Delete",
+	"projectRoles.credential:delete.tooltip": "Delete credentials",
 
 	"projectRoles.sourceControl:pull": "Pull",
 	"projectRoles.sourceControl:push": "Push",
+	"projectRoles.sourceControl:push.tooltip": "Push changes (workflows, credentials, tags) to the remote repository",
 	"projectRoles.sourceControl:manage": "Configure",
 
 	"projectRoles.sourceControl.table.name": "Name",
