--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1896,7 +1896,6 @@
 	"projectRoles.workflow:create": "Create",
 	"projectRoles.workflow:create.tooltip": "Create new workflows",
 	"projectRoles.workflow:share": "Share",
-	"projectRoles.workflow:share.tooltip": "Share workflows with other users",
 	"projectRoles.workflow:move": "Transfer",
 	"projectRoles.workflow:move.tooltip": "Transfer workflows to another project",
 	"projectRoles.workflow:delete": "Delete",
@@ -1909,6 +1908,7 @@
 	"projectRoles.credential:create": "Create",
 	"projectRoles.credential:create.tooltip": "Create new credentials",
 	"projectRoles.credential:share": "Share",
+	"projectRoles.credential:share.tooltip": "Share credentials with other users",
 	"projectRoles.credential:move": "Transfer",
 	"projectRoles.credential:move.tooltip": "Move credentials to another project",
 	"projectRoles.credential:delete": "Delete",
