--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2955,7 +2955,6 @@
 	"dataTable.addColumn.typeInput.label": "@:_reusableBaseText.type",
 	"dataTable.addColumn.error": "Error adding column",
 	"dataTable.addColumn.alreadyExistsError": "This column already exists",
-	"dataTable.addColumn.alreadyExistsDescription": "Column name already exisits, choose a different name",
 	"dataTable.moveColumn.error": "Error moving column",
 	"dataTable.deleteColumn.error": "Error deleting column",
 	"dataTable.deleteColumn.confirm.title": "Delete column",
@@ -2985,6 +2984,7 @@
 	"dataTable.filters.lessThan": "Less than",
 	"dataTable.filters.lessThanOrEqual": "Less than or equal",
 	"dataTable.addColumn.systemColumnDescription": "This is a system column, choose a different name",
+	"dataTable.addColumn.alreadyExistsDescription": "Column name already exists, choose a different name",
 	"dataTable.addColumn.testingColumnDescription": "This column is used for testing, choose a different name",
 	"settings.ldap": "LDAP",
 	"settings.ldap.note": "LDAP allows users to authenticate with their centralized account. It's compatible with services that provide an LDAP interface like Active Directory, Okta and Jumpcloud.",
