⚡ Updating info tip based on feature availability

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3020,7 +3020,9 @@
 	"dataTable.addColumn.systemColumnDescription": "This is a system column, choose a different name",
 	"dataTable.addColumn.testingColumnDescription": "This column is used for testing, choose a different name",
 	"settings.ai": "AI Usage",
-	"settings.ai.description": "Manage how n8n use your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> and <b>Ask AI in the Code node</b> features.",
+	"settings.ai.description.both": "Manage how n8n use your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> and <b>Ask AI in the Code node</b> features.",
+	"settings.ai.description.assistantOnly": "Manage how n8n use your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> feature.",
+	"settings.ai.description.askAiOnly": "Manage how n8n use your data to improve our AI features. These settings only apply to <b>Ask AI in the Code node</b> feature.",
 	"settings.ai.button.tooltip": "AI usage settings",
 	"settings.ai.allowSendingSchema.label": "Send schema data to AI",
 	"settings.ai.allowSendingSchema.description": "Allow n8n to send your node parameter schemas (names and types) to our AI service to provide better AI responses.",
