⚡ Implement UI for the settings page

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3020,8 +3020,15 @@
 	"dataTable.addColumn.systemColumnDescription": "This is a system column, choose a different name",
 	"dataTable.addColumn.testingColumnDescription": "This column is used for testing, choose a different name",
 	"settings.ai": "AI Usage",
-	"settings.ai.description": "Manage how n8n use your data to improve our AI features",
+	"settings.ai.description": "Manage how n8n use your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> and <b>Ask AI in the Code node</b> features.",
 	"settings.ai.button.tooltip": "AI usage settings",
+	"settings.ai.allowSendingSchema.label": "Send schema data to AI",
+	"settings.ai.allowSendingSchema.description": "Allow n8n to send your node parameter schemas (names and types) to our AI service to provide better AI responses.",
+	"settings.ai.allowSendingActualData.label": "Send actual data values to AI",
+	"settings.ai.allowSendingActualData.description": "Allow n8n to send actual data values (parameter values and resolved expression values) to our AI service to provide more accurate and context-aware AI responses.",
+	"settings.ai.efficiencyNotice": "Not sending data values will result in less helpful AI responses.",
+	"settings.ai.updated.success": "AI settings updated",
+	"settings.ai.updated.error": "There was a problem updating AI settings",
 	"settings.ldap": "LDAP",
 	"settings.ldap.note": "LDAP allows users to authenticate with their centralized account. It's compatible with services that provide an LDAP interface like Active Directory, Okta and Jumpcloud.",
 	"settings.ldap.infoTip": "Learn more about <a href='https://docs.n8n.io/user-management/ldap/' target='_blank'>LDAP in the Docs</a>",
