⚡ Show modal when toggling checkbox

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3030,9 +3030,12 @@
 	"settings.ai.allowSendingSchema.description": "Allow n8n to send your node parameter schemas (names and types) to our AI service to provide better AI responses.",
 	"settings.ai.allowSendingActualData.label": "Send actual data values to AI",
 	"settings.ai.allowSendingActualData.description": "Allow n8n to send actual data values (parameter values and resolved expression values) to our AI service to provide more accurate and context-aware AI responses.",
-	"settings.ai.efficiencyNotice": "Not sending data values will result in less helpful AI responses.",
+	"settings.ai.efficiencyNotice": "Not sending data values will disable the AI Workflow Builder and result in less helpful AI responses from other AI features.",
 	"settings.ai.updated.success": "AI settings updated",
 	"settings.ai.updated.error": "There was a problem updating AI settings",
+	"settings.ai.confirm.title": "Stop sending data to AI?",
+	"settings.ai.confirm.message": "Disabling data sending will reduce the effectiveness of AI features. Are you sure you want to proceed?",
+	"settings.ai.confirm.confirmButtonText": "Yes, disable",
 	"settings.ldap": "LDAP",
 	"settings.ldap.note": "LDAP allows users to authenticate with their centralized account. It's compatible with services that provide an LDAP interface like Active Directory, Okta and Jumpcloud.",
 	"settings.ldap.infoTip": "Learn more about <a href='https://docs.n8n.io/user-management/ldap/' target='_blank'>LDAP in the Docs</a>",
