WIP: Collection overhaul

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -605,7 +605,11 @@
 	"codeNodeEditor.optional": "optional",
 	"codeNodeEditor.defaultsTo": "Defaults to {default}.",
 	"collectionParameter.choose": "Choose...",
+	"collectionParameter.addItem": "Add item",
+	"collectionParameter.deleteItem": "Delete",
+	"collectionParameter.dragItem": "Drag to reorder",
 	"collectionParameter.noProperties": "No properties",
+	"collectionParameter.allOptionsAdded": "All options have been added",
 	"communityNodeFooter.legacy": "Legacy",
 	"communityNodeFooter.manage": "Manage",
 	"communityNodeFooter.reportIssue": "Report issue",
@@ -988,9 +992,12 @@
 	"expressionModalInput.pairedItemInvalidPinnedError": "Unpin node ‘{node}’ and execute",
 	"expressionModalInput.pairedItemError": "Can’t determine which item to use",
 	"expressionModalInput.pairedItemError.noRunData": "Can't determine which item to use - execute node for more info",
+	"fixedCollectionParameter.addItem": "Add item",
+	"fixedCollectionParameter.addParameter": "Add {parameter}",
 	"fixedCollectionParameter.choose": "Choose...",
 	"fixedCollectionParameter.currentlyNoItemsExist": "Currently no items exist",
 	"fixedCollectionParameter.deleteItem": "Delete item",
+	"fixedCollectionParameter.deleteParameter": "Delete {parameter}",
 	"fixedCollectionParameter.dragItem": "Drag item",
 	"fixedCollectionParameter.moveDown": "Move down",
 	"fixedCollectionParameter.moveUp": "Move up",
@@ -3378,6 +3385,9 @@
 	"assignment.addAll": "Add All",
 	"assignment.clearAll": "Clear All",
 	"assignment.binaryData.placeholder": "Name of binary input (or expression referencing it)",
+	"assignment.field": "Field {number}",
+	"assignment.remove": "Remove field",
+	"assignment.dragToReorder": "Drag to reorder",
 	"templateSetup.title": "Set up '{name}' template",
 	"templateSetup.instructions": "You need {0} account to setup this template",
 	"templateSetup.skip": "Skip",
