add basic page form

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2266,6 +2266,25 @@
 	"settings.usageAndPlan.license.communityRegistered.tooltip": "You have registered your email to unlock additional features on your community plan",
 	"settings.provisioning.title": "Provisioning",
 	"settings.provisioning.description": "Configure user provisioning settings and manage automated user lifecycle management.",
+	"settings.provisioning.loadError": "Failed to load provisioning configuration",
+	"settings.provisioning.saveError": "Failed to save provisioning configuration",
+	"settings.provisioning.save": "Save Configuration",
+	"settings.provisioning.scopesName": "Scopes Name",
+	"settings.provisioning.scopesName.placeholder": "Enter scopes name",
+	"settings.provisioning.scopesName.help": "The name of the scopes for provisioning",
+	"settings.provisioning.scopesInstanceRoleClaimName": "Instance Role Claim Name",
+	"settings.provisioning.scopesInstanceRoleClaimName.placeholder": "Enter instance role claim name",
+	"settings.provisioning.scopesInstanceRoleClaimName.help": "The claim name for instance roles in the token",
+	"settings.provisioning.scopesProjectsRolesClaimName": "Projects Roles Claim Name",
+	"settings.provisioning.scopesProjectsRolesClaimName.placeholder": "Enter projects roles claim name",
+	"settings.provisioning.scopesProjectsRolesClaimName.help": "The claim name for project roles in the token",
+	"settings.provisioning.scopesProvisionInstanceRole": "Provision Instance Role",
+	"settings.provisioning.scopesProvisionInstanceRole.help": "Enable automatic provisioning of instance roles",
+	"settings.provisioning.scopesProvisionProjectRoles": "Provision Project Roles",
+	"settings.provisioning.scopesProvisionProjectRoles.help": "Enable automatic provisioning of project roles",
+	"settings.provisioning.scopesProvisioningFrequency": "Provisioning Frequency",
+	"settings.provisioning.scopesProvisioningFrequency.placeholder": "Select provisioning frequency",
+	"settings.provisioning.scopesProvisioningFrequency.help": "How often to run the provisioning process",
 	"settings.externalSecrets.title": "External Secrets",
 	"settings.externalSecrets.info": "Connect external secrets tools for centralized credentials management across environments, and to enhance system security.",
 	"settings.externalSecrets.info.link": "More info",
