--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2273,20 +2273,20 @@
 	"settings.provisioning.save": "Save Configuration",
 	"settings.provisioning.scopesName": "Scopes Name",
 	"settings.provisioning.scopesName.placeholder": "Enter scopes name",
-	"settings.provisioning.scopesName.help": "The name of the scopes for provisioning",
+	"settings.provisioning.scopesName.help": "The name of the scope for provisioning, this is the scope that will be requested during Oauth flows",
 	"settings.provisioning.scopesInstanceRoleClaimName": "Instance Role Claim Name",
 	"settings.provisioning.scopesInstanceRoleClaimName.placeholder": "Enter instance role claim name",
-	"settings.provisioning.scopesInstanceRoleClaimName.help": "The claim name for instance roles in the token",
+	"settings.provisioning.scopesInstanceRoleClaimName.help": "The claim name used to provision instance roles from Oauth. For SAML / LDAP, this will be the attribute name checked.",
 	"settings.provisioning.scopesProjectsRolesClaimName": "Projects Roles Claim Name",
 	"settings.provisioning.scopesProjectsRolesClaimName.placeholder": "Enter projects roles claim name",
-	"settings.provisioning.scopesProjectsRolesClaimName.help": "The claim name for project roles in the token",
+	"settings.provisioning.scopesProjectsRolesClaimName.help": "The claim name used to provision projects and their roles from Oauth. For SAML / LDAP, this will be the attribute name checked.",
 	"settings.provisioning.scopesProvisionInstanceRole": "Provision Instance Role",
 	"settings.provisioning.scopesProvisionInstanceRole.help": "Enable automatic provisioning of instance roles",
 	"settings.provisioning.scopesProvisionProjectRoles": "Provision Project Roles",
-	"settings.provisioning.scopesProvisionProjectRoles.help": "Enable automatic provisioning of project roles",
+	"settings.provisioning.scopesProvisionProjectRoles.help": "Enable automatic provisioning of projects and project roles",
 	"settings.provisioning.scopesProvisioningFrequency": "Provisioning Frequency",
 	"settings.provisioning.scopesProvisioningFrequency.placeholder": "Select provisioning frequency",
-	"settings.provisioning.scopesProvisioningFrequency.help": "How often to run the provisioning process",
+	"settings.provisioning.scopesProvisioningFrequency.help": "How often to provision projects and roles",
 	"settings.externalSecrets.title": "External Secrets",
 	"settings.externalSecrets.info": "Connect external secrets tools for centralized credentials management across environments, and to enhance system security.",
 	"settings.externalSecrets.info.link": "More info",
