implement as preview

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -750,7 +750,10 @@
 	"dataMapping.schemaView.executeSchema": "{link} to see schema",
 	"dataMapping.schemaView.disabled": "This node is disabled and will just pass data through",
 	"dataMapping.schemaView.noMatches": "No results for '{search}'",
-	"dataMapping.schemaView.preview": "Usually outputs the following fields. Execute the node to see the actual ones. {link}",
+	"dataMapping.schemaView.preview": "Usually outputs the following fields. {execute} to see the actual ones. {link}",
+	"dataMapping.schemaView.previewLastExecution": "The fields below come from the last successful execution. {execute} to refresh them.",
+	"dataMapping.schemaView.previewLastExecution.executePreviousNodes": "Execute previous nodes",
+	"dataMapping.schemaView.preview.executeNode": "Execute the node",
 	"dataMapping.schemaView.previewExtraFields": "There may be more fields. Execute the node to be sure.",
 	"dataMapping.schemaView.previewNode": "Preview",
 	"dataMapping.schemaView.variablesContextTitle": "Variables and context",
